--- a/app/assets/slasher/styles/style.css
+++ b/app/assets/slasher/styles/style.css
@@ -71,14 +71,15 @@ body{
 	font-family:'Dosis', sans-serif;
 	font-weight:400;
 	padding-top:80px;
-	float:left;
+	margin: 0 auto;
+	/*float:left;*/
 	background-position:15px 0px;
 	background-repeat:no-repeat;
 	background-size:70px 70px;
 	width:100px;
-	margin-left:3px;
+	/*margin-left:3px;
 	margin-right:3px;
-	margin-bottom:30px;
+	margin-bottom:30px;*/
 }
 
 
