--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -4,7 +4,7 @@
       Loading the content...
       %em Loading depends on your connection speed!
 .homepage-wrapper
-  %img.homepage-logo{:alt => "img", :src => "assets/slasher/images/misc/logo.png"}/
+  %img.homepage-logo{:alt => "img", :src => "/image/logo.png"}/
   %em.homepage-logo-sub Creative Simplicity
   .homepage-navigation
     - if current_user.blank?
