fix:css remove no-need assets

--- a/app/assets/storymap/css/InfoWindow.css
+++ b/app/assets/storymap/css/InfoWindow.css
@@ -30,4 +30,5 @@ box-shadow:4px 4px 3px rgba(20%,20%,40%,0.5);
     background: url("/image/bt.jpg");
     width: 51px;
     height: 26px;
+    margin:auto;
 }
