--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -10,7 +10,8 @@
     - if current_user.blank?
       %a.facebook-icon{:href =>  '/users/auth/facebook'} Login
     - else
-      %a.type-icon{:href => welcome_show_path } Start Journey
+      %a.type-icon{:href => welcome_show_path } 台南 Tainan
+      %a.type-icon{:href => welcome_show_path } 台北 Taipei
     .clear
   .footer
     .clear
